--- a/vercel.json
+++ b/vercel.json
@@ -2,17 +2,20 @@
   "builds": [
     {
       "src": "skytech/wsgi.py",
-      "use": "@vercel/python"
-    }
+      "use": "@vercel/python",
+      "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+    },
+    {
+      "src": "build_files.sh",
+      "use": "@vercel/static-build",
+      "config": { "distDir": "staticfiles" }
+  }
   ],
   "routes": [
-    {
-      "src": "/static/(.*)",
-      "dest": "/static/$1"
-    },
     {
       "src": "/(.*)",
       "dest": "skytech/wsgi.py"
     }
-  ]
+  ],
+  "outputDirectory": "staticfiles"
 }
